# FaceDetectionProject

./: CMakeLists.txt  adaboost.cpp  adaboost.h  adaboost_detector.cpp  adaboost_detector.h  cascadeReader.cpp  cascadeReader.h  classif1  features.cpp  features.h  image.h  image_tools.cpp  image_tools.h  main.cpp  output
